# todo-challenge

./: LICENSE  README.md  pyproject.toml
backend/: models.py  settings.py  urls.py
backend/repository/: note_repository.py  note_repository_test.py
backend/services/: note_service.py  note_service_test.py
backend/views/: note_views.py  note_views_test.py
backend/views/api/: login_viewset.py  serializers.py  viewsets.py
