[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mysqlclient = "^2.2.4"
djangorestframework = "^3.14.0"
django-filter = "^23.5"
pytest = "^8.0.2"


[tool.poetry.group.dev.dependencies]
django = "^5.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
